--- a/Showcase/Showcase.csproj
+++ b/Showcase/Showcase.csproj
@@ -362,7 +362,10 @@
     <Content Include="Content\assets\vendor\popper\popper.min.js" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\images\developer-start-bottom-logo.png" />
     <Content Include="Content\images\developer-start-logo-header-1-res.png" />
+    <Content Include="Content\images\nate-johnson-profile-1.jpg" />
+    <Content Include="Content\images\nate-johnson-profile-2.jpg" />
     <Content Include="Content\images\showcase-bg-dark.jpg" />
     <Content Include="Content\images\showcase-home-bg.jpg" />
     <Content Include="Content\images\showcase-writer-bg.jpg" />
