--- a/Showcase/Showcase.csproj
+++ b/Showcase/Showcase.csproj
@@ -52,10 +52,10 @@
       <HintPath>..\packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.0\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.AI.Agent.Intercept, Version=2.4.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.ApplicationInsights.Agent.Intercept.2.4.0\lib\net45\Microsoft.AI.Agent.Intercept.dll</HintPath>
@@ -198,6 +198,7 @@
     <Compile Include="Areas\Admin\Controllers\AuthorsController.cs" />
     <Compile Include="Areas\Admin\Controllers\CategoriesController.cs" />
     <Compile Include="Areas\Admin\Controllers\DashboardController.cs" />
+    <Compile Include="Areas\Admin\Controllers\PostLocationsController.cs" />
     <Compile Include="Areas\Admin\Controllers\ProjectsController.cs" />
     <Compile Include="Areas\Admin\Controllers\TasksController.cs" />
     <Compile Include="Areas\Admin\Controllers\WorkoutsController.cs" />
@@ -248,6 +249,22 @@
     <Compile Include="DataContexts\BlogMigrations\201909272213145_UpdatedModelAgain.Designer.cs">
       <DependentUpon>201909272213145_UpdatedModelAgain.cs</DependentUpon>
     </Compile>
+    <Compile Include="DataContexts\BlogMigrations\201910221606215_UpdatedPosts1.cs" />
+    <Compile Include="DataContexts\BlogMigrations\201910221606215_UpdatedPosts1.Designer.cs">
+      <DependentUpon>201910221606215_UpdatedPosts1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DataContexts\BlogMigrations\201910221926152_AutoGenerateIdentity.cs" />
+    <Compile Include="DataContexts\BlogMigrations\201910221926152_AutoGenerateIdentity.Designer.cs">
+      <DependentUpon>201910221926152_AutoGenerateIdentity.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DataContexts\BlogMigrations\201910231841434_AddRequiredFields.cs" />
+    <Compile Include="DataContexts\BlogMigrations\201910231841434_AddRequiredFields.Designer.cs">
+      <DependentUpon>201910231841434_AddRequiredFields.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DataContexts\BlogMigrations\201911082323528_AddedPostLocations.cs" />
+    <Compile Include="DataContexts\BlogMigrations\201911082323528_AddedPostLocations.Designer.cs">
+      <DependentUpon>201911082323528_AddedPostLocations.cs</DependentUpon>
+    </Compile>
     <Compile Include="DataContexts\BlogMigrations\BlogConfiguration.cs" />
     <Compile Include="DataContexts\IdentityDb.cs" />
     <Compile Include="DataContexts\IdentityMigrations\201812282122040_Initial Create.cs" />
@@ -273,6 +290,7 @@
     <Compile Include="Models\MetaSEO.cs" />
     <Compile Include="Models\Photo.cs" />
     <Compile Include="Models\Post.cs" />
+    <Compile Include="Models\PostLocation.cs" />
     <Compile Include="Models\Project.cs" />
     <Compile Include="Models\Tag.cs" />
     <Compile Include="Models\Task.cs" />
@@ -1266,6 +1284,12 @@
     <Content Include="Content\bootstrap-reboot.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
+    <Content Include="Areas\Admin\Views\Shared\_StatusMessage.cshtml" />
+    <Content Include="Areas\Admin\Views\PostLocations\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\PostLocations\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\PostLocations\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\PostLocations\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\PostLocations\Index.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\clockpicker.js" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
@@ -1383,6 +1407,8 @@
     <Content Include="Views\Shared\_BlogFooter.cshtml" />
     <Content Include="Views\Shared\_CheckBoxList.cshtml" />
     <Content Include="Areas\Admin\Views\Posts\_Knockout.cshtml" />
+    <Content Include="Views\Blog\NotFound.cshtml" />
+    <Content Include="Views\Home\Projects.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -1422,6 +1448,18 @@
     <EmbeddedResource Include="DataContexts\BlogMigrations\201909272213145_UpdatedModelAgain.resx">
       <DependentUpon>201909272213145_UpdatedModelAgain.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="DataContexts\BlogMigrations\201910221606215_UpdatedPosts1.resx">
+      <DependentUpon>201910221606215_UpdatedPosts1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DataContexts\BlogMigrations\201910221926152_AutoGenerateIdentity.resx">
+      <DependentUpon>201910221926152_AutoGenerateIdentity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DataContexts\BlogMigrations\201910231841434_AddRequiredFields.resx">
+      <DependentUpon>201910231841434_AddRequiredFields.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DataContexts\BlogMigrations\201911082323528_AddedPostLocations.resx">
+      <DependentUpon>201911082323528_AddedPostLocations.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DataContexts\IdentityMigrations\201812282122040_Initial Create.resx">
       <DependentUpon>201812282122040_Initial Create.cs</DependentUpon>
     </EmbeddedResource>
@@ -1434,6 +1472,15 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ShowcaseResources\ShowcaseResources.csproj">
+      <Project>{b65976b7-adf3-4035-bd41-b3ed02e0c937}</Project>
+      <Name>ShowcaseResources</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
