--- a/Showcase/packages.config
+++ b/Showcase/packages.config
@@ -5,6 +5,7 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
+  <package id="log4net" version="2.0.8" targetFramework="net472" />
   <package id="Microsoft.ApplicationInsights" version="2.10.0" targetFramework="net472" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net472" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.10.0" targetFramework="net472" />
@@ -40,5 +41,11 @@
   <package id="popper.js" version="1.14.0" targetFramework="net472" />
   <package id="Respond" version="1.4.2" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
+  <package id="Unity.Abstractions" version="5.11.1" targetFramework="net472" />
+  <package id="Unity.Container" version="5.11.1" targetFramework="net472" />
+  <package id="Unity.Mvc" version="5.11.1" targetFramework="net472" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
