--- a/Showcase/Showcase.csproj
+++ b/Showcase/Showcase.csproj
@@ -127,10 +127,6 @@
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="Showcase.Repository, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>Bin\Showcase.Repository.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -232,6 +228,7 @@
     <Compile Include="Areas\Admin\Models\BlogAdminViewModel.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BlogController.cs" />
+    <Compile Include="Controllers\BlogLayoutController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Areas\Admin\Controllers\PostsController.cs" />
@@ -296,6 +293,14 @@
     <Compile Include="DataContexts\BlogMigrations\201911192146108_UpdatedModel.Designer.cs">
       <DependentUpon>201911192146108_UpdatedModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="DataContexts\BlogMigrations\201911271659168_AddedPostCount.cs" />
+    <Compile Include="DataContexts\BlogMigrations\201911271659168_AddedPostCount.Designer.cs">
+      <DependentUpon>201911271659168_AddedPostCount.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DataContexts\BlogMigrations\201912022308557_AddedPostImages.cs" />
+    <Compile Include="DataContexts\BlogMigrations\201912022308557_AddedPostImages.Designer.cs">
+      <DependentUpon>201912022308557_AddedPostImages.cs</DependentUpon>
+    </Compile>
     <Compile Include="DataContexts\BlogMigrations\BlogConfiguration.cs" />
     <Compile Include="DataContexts\IdentityDb.cs" />
     <Compile Include="DataContexts\IdentityMigrations\201812282122040_Initial Create.cs" />
@@ -313,6 +318,7 @@
     <Compile Include="Helpers\DbHelper.cs" />
     <Compile Include="Helpers\ShowcaseHtmlHelpers.cs" />
     <Compile Include="Interfaces\IBlogAdminRepo.cs" />
+    <Compile Include="Interfaces\IBlogLocationRepo.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Album.cs" />
     <Compile Include="Models\Author.cs" />
@@ -322,6 +328,7 @@
     <Compile Include="Models\MetaSEO.cs" />
     <Compile Include="Models\Photo.cs" />
     <Compile Include="Models\Post.cs" />
+    <Compile Include="Models\PostImage.cs" />
     <Compile Include="Models\PostLocation.cs" />
     <Compile Include="Models\Project.cs" />
     <Compile Include="Models\Tag.cs" />
@@ -330,6 +337,7 @@
     <Compile Include="Models\Workout.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repos\BlogAdminRepo.cs" />
+    <Compile Include="Repos\BlogLocationRepo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\PostsViewModel.cs" />
   </ItemGroup>
@@ -1376,7 +1384,6 @@
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <Content Include="Views\Web.config" />
-    <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
@@ -1420,7 +1427,7 @@
     <Content Include="Views\Shared\_StaticHeader.cshtml" />
     <Content Include="Views\Shared\_AccountLayout.cshtml" />
     <Content Include="Views\Shared\_AuthorTitle.cshtml" />
-    <Content Include="Views\Shared\_SingleLayout.cshtml" />
+    <Content Include="Views\Shared\_BlogHomeLayout.cshtml" />
     <Content Include="Views\Shared\_BlogHeader.cshtml" />
     <Content Include="Views\Blog\_BlogIndex.cshtml" />
     <Content Include="Views\Shared\_BlogHead.cshtml" />
@@ -1442,9 +1449,18 @@
     <Content Include="Areas\Admin\Views\Posts\_Knockout.cshtml" />
     <Content Include="Views\Blog\NotFound.cshtml" />
     <Content Include="Views\Home\Projects.cshtml" />
+    <Content Include="Views\BlogLayout\_HomeTopCarousel.cshtml" />
+    <Content Include="Views\BlogLayout\_HomeMainCarousel.cshtml" />
+    <Content Include="Views\BlogLayout\_HomeBottom.cshtml" />
+    <Content Include="Views\BlogLayout\_HomeBottomBody.cshtml" />
+    <Content Include="Views\BlogLayout\_BlogSideBar.cshtml" />
+    <Content Include="Views\BlogLayout\_BlogSideColumn.cshtml" />
+    <Content Include="Views\BlogLayout\_BlogSideCategories.cshtml" />
+    <Content Include="Views\BlogLayout\_BlogSideTags.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Content\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -1495,6 +1511,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DataContexts\BlogMigrations\201911192146108_UpdatedModel.resx">
       <DependentUpon>201911192146108_UpdatedModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DataContexts\BlogMigrations\201911271659168_AddedPostCount.resx">
+      <DependentUpon>201911271659168_AddedPostCount.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DataContexts\BlogMigrations\201912022308557_AddedPostImages.resx">
+      <DependentUpon>201912022308557_AddedPostImages.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DataContexts\IdentityMigrations\201812282122040_Initial Create.resx">
       <DependentUpon>201812282122040_Initial Create.cs</DependentUpon>
