--- a/Showcase/Showcase.csproj
+++ b/Showcase/Showcase.csproj
@@ -223,6 +223,7 @@
     <Compile Include="Areas\Admin\Controllers\DashboardController.cs" />
     <Compile Include="Areas\Admin\Controllers\PostLocationsController.cs" />
     <Compile Include="Areas\Admin\Controllers\ProjectsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\TagsController.cs" />
     <Compile Include="Areas\Admin\Controllers\TasksController.cs" />
     <Compile Include="Areas\Admin\Controllers\WorkoutsController.cs" />
     <Compile Include="Areas\Admin\Models\BlogAdminViewModel.cs" />
@@ -1342,6 +1343,11 @@
     <Content Include="Areas\Admin\Views\PostLocations\Details.cshtml" />
     <Content Include="Areas\Admin\Views\PostLocations\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\PostLocations\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Tags\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\Tags\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\Tags\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\Tags\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Tags\Index.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\clockpicker.js" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
