--- a/Showcase/Showcase.csproj
+++ b/Showcase/Showcase.csproj
@@ -319,6 +319,10 @@
     <Compile Include="DataContexts\BlogMigrations\202002122230261_RequiredComment.Designer.cs">
       <DependentUpon>202002122230261_RequiredComment.cs</DependentUpon>
     </Compile>
+    <Compile Include="DataContexts\BlogMigrations\202002141706287_ChildComments.cs" />
+    <Compile Include="DataContexts\BlogMigrations\202002141706287_ChildComments.Designer.cs">
+      <DependentUpon>202002141706287_ChildComments.cs</DependentUpon>
+    </Compile>
     <Compile Include="DataContexts\BlogMigrations\BlogConfiguration.cs" />
     <Compile Include="DataContexts\IdentityDb.cs" />
     <Compile Include="DataContexts\IdentityMigrations\201812282122040_Initial Create.cs" />
@@ -339,6 +343,7 @@
     <Compile Include="Interfaces\IBlogLocationRepo.cs" />
     <Compile Include="Interfaces\IDashboardRepo.cs" />
     <Compile Include="Interfaces\ICommentRepo.cs" />
+    <Compile Include="Interfaces\IBlogPostRepo.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Album.cs" />
     <Compile Include="Models\Author.cs" />
@@ -360,6 +365,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repos\BlogAdminRepo.cs" />
     <Compile Include="Repos\BlogLocationRepo.cs" />
+    <Compile Include="Repos\BlogPostRepo.cs" />
     <Compile Include="Repos\CommentRepo.cs" />
     <Compile Include="Repos\DashboardRepo.cs" />
     <Compile Include="Startup.cs" />
@@ -1562,6 +1568,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DataContexts\BlogMigrations\202002122230261_RequiredComment.resx">
       <DependentUpon>202002122230261_RequiredComment.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DataContexts\BlogMigrations\202002141706287_ChildComments.resx">
+      <DependentUpon>202002141706287_ChildComments.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DataContexts\IdentityMigrations\201812282122040_Initial Create.resx">
       <DependentUpon>201812282122040_Initial Create.cs</DependentUpon>
