--- a/Showcase/Showcase.csproj
+++ b/Showcase/Showcase.csproj
@@ -227,6 +227,8 @@
     <Compile Include="Areas\Admin\Controllers\TasksController.cs" />
     <Compile Include="Areas\Admin\Controllers\WorkoutsController.cs" />
     <Compile Include="Areas\Admin\Models\BlogAdminViewModel.cs" />
+    <Compile Include="Attributes\AjaxOnlyAttribute.cs" />
+    <Compile Include="Attributes\RateLimitAttribute.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BlogController.cs" />
     <Compile Include="Controllers\BlogLayoutController.cs" />
@@ -322,6 +324,10 @@
     <Compile Include="DataContexts\BlogMigrations\202002141706287_ChildComments.cs" />
     <Compile Include="DataContexts\BlogMigrations\202002141706287_ChildComments.Designer.cs">
       <DependentUpon>202002141706287_ChildComments.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DataContexts\BlogMigrations\202002201902571_UpdatedStringLength.cs" />
+    <Compile Include="DataContexts\BlogMigrations\202002201902571_UpdatedStringLength.Designer.cs">
+      <DependentUpon>202002201902571_UpdatedStringLength.cs</DependentUpon>
     </Compile>
     <Compile Include="DataContexts\BlogMigrations\BlogConfiguration.cs" />
     <Compile Include="DataContexts\IdentityDb.cs" />
@@ -1497,6 +1503,7 @@
     <Content Include="Views\Shared\_AccountFooter.cshtml" />
     <Content Include="Views\Shared\_CommentBox.cshtml" />
     <Content Include="Views\Shared\_NewComment.cshtml" />
+    <Content Include="Views\Shared\_NewReply.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -1571,6 +1578,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DataContexts\BlogMigrations\202002141706287_ChildComments.resx">
       <DependentUpon>202002141706287_ChildComments.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DataContexts\BlogMigrations\202002201902571_UpdatedStringLength.resx">
+      <DependentUpon>202002201902571_UpdatedStringLength.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DataContexts\IdentityMigrations\201812282122040_Initial Create.resx">
       <DependentUpon>201812282122040_Initial Create.cs</DependentUpon>
