--- a/Showcase/Showcase.csproj
+++ b/Showcase/Showcase.csproj
@@ -220,6 +220,7 @@
     <Compile Include="Areas\Admin\Controllers\AlbumsController.cs" />
     <Compile Include="Areas\Admin\Controllers\AuthorsController.cs" />
     <Compile Include="Areas\Admin\Controllers\CategoriesController.cs" />
+    <Compile Include="Areas\Admin\Controllers\CommentsController.cs" />
     <Compile Include="Areas\Admin\Controllers\DashboardController.cs" />
     <Compile Include="Areas\Admin\Controllers\PostLocationsController.cs" />
     <Compile Include="Areas\Admin\Controllers\ProjectsController.cs" />
@@ -344,6 +345,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\DbHelper.cs" />
+    <Compile Include="Helpers\IdentityClaims.cs" />
     <Compile Include="Helpers\ShowcaseHtmlHelpers.cs" />
     <Compile Include="Interfaces\IBlogAdminRepo.cs" />
     <Compile Include="Interfaces\IBlogLocationRepo.cs" />
@@ -1372,6 +1374,11 @@
     <Content Include="Areas\Admin\Views\Tags\Details.cshtml" />
     <Content Include="Areas\Admin\Views\Tags\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Tags\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Comments\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\Comments\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\Comments\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\Comments\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Comments\Index.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\clockpicker.js" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
