--- a/Showcase/Web.config
+++ b/Showcase/Web.config
@@ -12,6 +12,7 @@
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Showcase.mdf;Initial Catalog=Showcase;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
+    <add key="InstagramBaseUrl" value="https://www.instagram.com/developer/endpoints/" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
