--- a/Showcase/packages.config
+++ b/Showcase/packages.config
@@ -40,6 +40,7 @@
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="popper.js" version="1.14.0" targetFramework="net472" />
   <package id="Respond" version="1.4.2" targetFramework="net472" />
+  <package id="RestSharp" version="106.10.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
